--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,5 @@ export(prism_get_output_structure)
 export(prism_model_run)
 export(prism_set_run_progress)
 export(test)
-import(accept)
+import(fev1)
 import(jsonlite)
